# seed-moth-poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
assets/pretrained/: README.md
data/backgrounds/: README.md
data/reference/: README.md
data/reference/derived/: manifest.json
data/reference/reviewed/: manifest.json
data/synthetic/: manifest.json
data/synthetic/labels/: synth_0001.txt  synth_0002.txt  synth_0003.txt  synth_0004.txt  synth_0005.txt  synth_0006.txt  synth_0007.txt  synth_0008.txt  synth_0009.txt  synth_0010.txt  synth_0011.txt  synth_0012.txt  synth_0013.txt  synth_0014.txt  synth_0015.txt  synth_0016.txt  synth_0017.txt  synth_0018.txt  synth_0019.txt  synth_0020.txt  synth_0021.txt  synth_0022.txt  synth_0023.txt  synth_0024.txt  synth_0025.txt  synth_0026.txt  synth_0027.txt  synth_0028.txt  synth_0029.txt  synth_0030.txt  synth_0031.txt  synth_0032.txt  synth_0033.txt  synth_0034.txt  synth_0035.txt  synth_0036.txt  synth_0037.txt  synth_0038.txt  synth_0039.txt  synth_0040.txt  (+80 more)
results/detection/yolo_dataset/: dataset.yaml  split.json
results/detection/yolo_dataset/labels/train/: synth_0001.txt  synth_0002.txt  synth_0003.txt  synth_0005.txt  synth_0008.txt  synth_0013.txt  synth_0019.txt  (+44 more)
results/eval/val/: metrics.json  per_image.json
results/models/detection/: training.json
results/models/detection/train/: args.yaml  results.csv
results/predictions/detection/: counts.json  predictions.json
results/predictions/detection/labels/: 1.txt  2.txt  3.txt
src/seed_moth_poc/: __init__.py
src/seed_moth_poc/data_prep/: README.md  __init__.py  annotator.py  background_generator.py  manual_cutout.py  mask_extractor.py
src/seed_moth_poc/data_prep/commons/: __init__.py  common.py  image.py
src/seed_moth_poc/detection/: README.md  __init__.py  detector.py  predict.py  train.py
src/seed_moth_poc/evaluation/: README.md  __init__.py  evaluate.py
src/seed_moth_poc/synthetic/: README.md  __init__.py  generator.py  image_ops.py  priors.py
(+9 files in other folders)
